save current state

--- a/src/main/resources/assets/colossal_battery/lang/zh_cn.json
+++ b/src/main/resources/assets/colossal_battery/lang/zh_cn.json
@@ -4,9 +4,9 @@
   "block.colossal_battery.multi_block_dummy": "多方块结构",
   "block.colossal_battery.battery_core": "电池核心",
   "block.colossal_battery.battery_interface": "电池访问口",
-  "block.colossal_battery.battery_inner_basic": "基础电池填充物",
-  "block.colossal_battery.battery_inner_advanced": "高级电池填充物",
-  "block.colossal_battery.battery_inner_ultimate": "终极电池填充物",
+  "block.colossal_battery.battery_inner_tier_basic": "基础电池填充物",
+  "block.colossal_battery.battery_inner_tier_advanced": "高级电池填充物",
+  "block.colossal_battery.battery_inner_tier_ultimate": "终极电池填充物",
   "block.colossal_battery.battery_wall_copper": "铜电池外壁",
   "block.colossal_battery.battery_wall_iron": "铁电池外壁",
   "block.colossal_battery.battery_wall_silver": "银电池外壁",
@@ -14,6 +14,14 @@
   "block.colossal_battery.battery_wall_diamond": "钻石电池外壁",
   "block.colossal_battery.battery_wall_obsidian": "黑曜石电池外壁",
   "block.colossal_battery.battery_wall_ultimate": "终极电池外壁",
+  "block.colossal_battery.battery_wall_mek_basic": "基础通用机械框架",
+  "block.colossal_battery.battery_wall_mek_advanced": "高级通用机械框架",
+  "block.colossal_battery.battery_wall_mek_elite": "精英通用机械框架",
+  "block.colossal_battery.battery_wall_mek_ultimate": "终极通用机械框架",
+  "block.colossal_battery.battery_inner_material_mek_basic": "基础通用机械核心材料",
+  "block.colossal_battery.battery_inner_material_mek_advanced": "高级通用机械核心材料",
+  "block.colossal_battery.battery_inner_material_mek_elite": "精英通用机械核心材料",
+  "block.colossal_battery.battery_inner_material_mek_ultimate": "终极通用机械核心材料",
 
   "message.colossal_battery.success": "§a结构构建成功！",
   "message.colossal_battery.error.no_structure": "§c结构构建失败：未找到结构，结构材料：",
