--- a/src/main/resources/assets/colossal_battery/lang/en_us.json
+++ b/src/main/resources/assets/colossal_battery/lang/en_us.json
@@ -4,9 +4,9 @@
   "block.colossal_battery.multi_block_dummy": "Multi Block Structure",
   "block.colossal_battery.battery_core": "Battery Core",
   "block.colossal_battery.battery_interface": "Battery Interface",
-  "block.colossal_battery.battery_inner_basic": "Basic Battery Filler",
-  "block.colossal_battery.battery_inner_advanced": "Advanced Battery Filler",
-  "block.colossal_battery.battery_inner_ultimate": "Ultimate Battery Filler",
+  "block.colossal_battery.battery_inner_tier_basic": "Basic Battery Filler",
+  "block.colossal_battery.battery_inner_tier_advanced": "Advanced Battery Filler",
+  "block.colossal_battery.battery_inner_tier_ultimate": "Ultimate Battery Filler",
   "block.colossal_battery.battery_wall_copper": "Copper Battery Wall",
   "block.colossal_battery.battery_wall_iron": "Iron Battery Wall",
   "block.colossal_battery.battery_wall_silver": "Silver Battery Wall",
@@ -14,6 +14,14 @@
   "block.colossal_battery.battery_wall_diamond": "Diamond Battery Wall",
   "block.colossal_battery.battery_wall_obsidian": "Obsidian Battery Wall",
   "block.colossal_battery.battery_wall_ultimate": "Ultimate Battery Wall",
+  "block.colossal_battery.battery_wall_mek_basic": "Basic Mek Frame",
+  "block.colossal_battery.battery_wall_mek_advanced": "Advanced Mek Frame",
+  "block.colossal_battery.battery_wall_mek_elite": "Elite Mek Frame",
+  "block.colossal_battery.battery_wall_mek_ultimate": "Ultimate Mek Frame",
+  "block.colossal_battery.battery_inner_material_mek_basic": "Basic Mek Core Material",
+  "block.colossal_battery.battery_inner_material_mek_advanced": "Advanced Mek Core Material",
+  "block.colossal_battery.battery_inner_material_mek_elite": "Elite Mek Core Material",
+  "block.colossal_battery.battery_inner_material_mek_ultimate": "Ultimate Mek Core Material",
 
   "message.colossal_battery.success": "§aStructure construct successful!",
   "message.colossal_battery.error.no_structure": "§cStructure construct attempt failed: didn't found any structure, material:",
